--- a/application/modules/backend/views/scripts/claim/member.phtml
+++ b/application/modules/backend/views/scripts/claim/member.phtml
@@ -64,10 +64,8 @@ $helperImage = new Default_View_Helper_Image();
                     <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small"><a
                             href="<?= $this->member->link_twitter ?>"
                             target="_blank"><?= $this->member->link_twitter ?></a></div>
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Facebook
-                                                                               Name: <?= $this->member->facebook_username ?></div>
-                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Twitter
-                                                                               Name: <?= $this->member->twitter_username ?></div>
+                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Facebook Name: <?= $this->member->facebook_username ?></div>
+                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 small">Twitter Name: <?= $this->member->twitter_username ?></div>
                 </div>
             </div>
         </div>
