--- a/application/modules/default/views/scripts/explore/partials/comment.phtml
+++ b/application/modules/default/views/scripts/explore/partials/comment.phtml
@@ -19,30 +19,35 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+$helpProductUrl = new Default_View_Helper_BuildProductUrl();
+$helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
+$helpImage = new Default_View_Helper_Image();
+$helpCategories = new Default_View_Helper_FetchCategoriesForProductAsString();
+$helpTruncate = new Default_View_Helper_Truncate();
+$helpPrintDate = new Default_View_Helper_PrintDate();
 ?>
 <div class="commentstore">
 	<div class="row" style="margin-left: 0;margin-right: 0; ">
 		<?= $this->comment['title'] ?>
 		<span
-			style="display: block;" class="small"><?php echo $this->fetchCategoriesForProductAsString($this->comment['project_id']) ?></span>
+			style="display: block;" class="small"><?php echo $helpCategories->fetchCategoriesForProductAsString($this->comment['project_id']) ?></span>
 	</div>
 	<div class="row" style="margin-left: 0;margin-right: 0;">
 		<div class="userinfo">
-			<a href="/member/<?php echo $this->comment['member_id'] ?>"><img
-					src="<?= $this->Image($this->comment['profile_image_url'],
-						array('width' => 40, 'height' => 40)) ?>"/>
+			<a href="<?=$helpMemberUrl->buildMemberUrl($this->comment['member_id'])?>">
+                <img src="<?= $helpImage->Image($this->comment['profile_image_url'],array('width' => 40, 'height' => 40)) ?>" />
 				<span style="display: block"><?= $this->comment['username'] ?></span>
 			</a>
 		</div>
 		<div class="info">
-			<div class="small" style="line-height:1.3"><a
-					href="/p/<?= $this->comment['project_id'] ?>">
-						<?=$this->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>						
-					</a>
+			<div class="small" style="line-height:1.3">
+                <a href="<?=$helpProductUrl->buildProductUrl($this->comment['project_id'])?>">
+					<?=$helpTruncate->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>
+				</a>
 			</div>
 		</div>
 	</div>
 	<div class="row " style="margin-left: 0;margin-right: 0;">
-		<span style="font-size: smaller;"><?= $this->printDate($this->comment['comment_created_at'])?> </span>
+		<span style="font-size: smaller;"><?= $helpPrintDate->printDate($this->comment['comment_created_at'])?></span>
 	</div>
 </div>
