--- a/application/modules/default/views/scripts/explore/partials/donation.phtml
+++ b/application/modules/default/views/scripts/explore/partials/donation.phtml
@@ -22,34 +22,29 @@
 
 $helperPrintDate = new Default_View_Helper_PrintDate();
 $updateTime = $helperPrintDate->printDate($this->donation['create_time']);
-$helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
+$helpBuildProductUrl = new Default_View_Helper_BuildProductUrl();
 $helperFetchSubcategoriesForProduct = new Default_View_Helper_FetchCategoriesForProductAsString();
 $helperImage = new Default_View_Helper_Image();
-?>
-
-<div class="commentstore">
+$helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
+?><div class="commentstore">
 	<div class="row" style="margin-left: 0;margin-right: 0; ">
-		<a href="/p/<?= $this->donation['project_id'] ?>"><?= $this->donation['title'] ?></a>
-		<span
-			style="display: block;"><?php echo $helperFetchSubcategoriesForProduct->fetchCategoriesForProductAsString($this->donation['project_id']) ?></span>
+		<a href="<?= $helpBuildProductUrl->buildProductUrl($this->donation['project_id']) ?>">
+            <?= $this->donation['title'] ?>
+        </a>
+		<span style="display: block;">
+            <?php echo $helperFetchSubcategoriesForProduct->fetchCategoriesForProductAsString($this->donation['project_id']) ?>
+        </span>
 	</div>
 	<div class="row" style="margin-left: 0;margin-right: 0;">
-
 		<div class="userinfo">
-
-
 			<div>
-				<a href="/member/<?php echo $this->donation['member_id'] ?>"><img
-						src="<?= $helperImage->Image($this->donation['profile_image_url'],
-							array('width' => 40, 'height' => 40)) ?>"/>
+				<a href="<?php echo $helpMemberUrl->buildMemberUrl($this->donation['member_id']) ?>">
+                    <img src="<?= $helperImage->Image($this->donation['profile_image_url'],	array('width' => 40, 'height' => 40)) ?>" />
 					<span style="display: block"><?= $this->donation['username'] ?></span>
 				</a>
 			</div>
-
-
 		</div>
-		<div
-			style="display: block; float: right; font-size:15px; font-weight:bold; padding-top:10px; padding-right:20px;">
+		<div style="display: block; float: right; font-size:15px; font-weight:bold; padding-top:10px; padding-right:20px;">
 			$<?= $this->donation['amount'] ?>
 		</div>
 	</div>
