--- a/application/modules/default/views/scripts/product/partials/makerconfig.phtml
+++ b/application/modules/default/views/scripts/product/partials/makerconfig.phtml
@@ -291,11 +291,12 @@
     $supportersArray = array();
     if(count($this->supporting)>0)
     {
+        $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
         foreach ($this->supporting as $supporter) {
             $new_supporter = new stdClass();
             $new_supporter->username = $supporter->username;
             $new_supporter->img = $supporter->profile_image_url;
-            $new_supporter->url = $this->buildMemberUrl($supporter->member_id);
+            $new_supporter->url = $helpMemberUrl->buildMemberUrl($supporter->member_id);
             array_push($supportersArray, $new_supporter);
         }
     }
